--- a/index.html
+++ b/index.html
@@ -68,13 +68,9 @@
 			</div>
 			
 			<div class="form-group">
-				<label>Last Name*</label>>
+				<label>Last Name*</label>
 			</div>
-			
-			<div class="form-group">
-				<label>Position/Job title</label>
-				<input type="text" id="Job" class="form-control my_control">
-			</div>
+		
 			
 			<div class="form-group">
 				<label>Email address*</label>
@@ -206,30 +202,30 @@
 <div class="footer_part">
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-2"></div>
-			<div class="col-sm-8">
+			
+			<div class="col-sm-12">
 				<div class="row">
-					<div class="col-sm-6">
-						<p class="copy_text text-left">© 2017 HappiDoc. All rights reserved.</p>
+					<div class="col-sm-9">
+						<p class="copy_text text-right">© 2017 HappiDoc. All rights reserved.</p>
 					</div>
-    <div class="col-sm-6">
-        <p class="copy_text text-left">Contact Us @ survey@happidoc-research.com</p>
-		<a href="https://happidoc.com/privacypolicy"><p class="copy_text"> Privacy Policy & Terms of Use</p></a>           
-    </div>
-</div>
+				<div class="col-sm-3">
+					<p class="copy_text text-right">Contact Us - bids@happidoc.com</p>
+					<a href="https://happidoc.com/privacypolicy"><p class="copy_text"> Privacy Policy & Terms of Use</p></a>           
+				</div>
+				</div>
     <div class="row">
-        <div class="col-sm-4"></div>
-        <div class="col-sm-6">
+        <div class="col-sm-5"></div>
+        <div class="col-sm-7">
              <a href="https://twitter.com/happidoc?lang=en"><i class="fa fa-twitter footer_icon" aria-hidden="true"></i></a>
              <a href="https://www.facebook.com/groups/medclick">
              <i class="fa fa-facebook footer_icon_facebook" aria-hidden="true"></i>
              </a>
              <a href="https://in.linkedin.com/company/happidoc"><i class="fa fa-linkedin footer_icon_in" aria-hidden="true"></i></a>
         </div>
-        <div class="col-sm-2"></div>
+        
     </div>
 	</div>
-	<div class="col-sm-2"></div>
+	
 		</div>
 	</div>
 </div>
