--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 							<h2 class="submit_head">Submit RFP</h2>
 							<h1 class="request_head">Request for proposal for services</h1>
 							<p class="how_para">How can we help your business?</p>
-							<p class="thank_para">Thank you for your interest in HappiDoc's services. Please take a few moments to complete this form. Please be sure to include the target Therapy area and Geography. Documents can be uploaded to provide details of your request. This form only accepts qualified proposal requests for HappiDoc's services. <a href="#">Contact Us</a> page.</p>
+							<p class="thank_para">Thank you for your interest in HappiDoc's services. Please take a few moments to complete this form. Please be sure to include the target Therapy area and Geography. Documents can be uploaded to provide details of your request. This form only accepts qualified proposal requests for HappiDoc's services. 
+
 						
 						</div>
 						<div class="col-sm-5"></div>
